Fixes caption alignment to show full text

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -211,13 +211,13 @@ a:hover {
     top: 0;
 
 
-  h5 {
+   .carousel-caption h5 {
   position: absolute;
   top: 60px;
   left: 348px;
  }
 
-  p {
+  .carousel-caption p {
   position: absolute;
   bottom: -100px;
   align-items: center;
